WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273323
[WebGPU] Destroyed texture should not be used as depth stencil attachments
https://bugs.webkit.org/show_bug.cgi?id=273323
Summary
[WebGPU] Destroyed texture should not be used as depth stencil attachments
Mike Wyrzykowski
Reported
2024-04-26 09:18:04 PDT
[WebGPU] Destroyed texture should not be used as depth stencil attachments
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-04-26 09:18:18 PDT
radar://127115893
Mike Wyrzykowski
Comment 2
2024-04-26 09:28:16 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27805
Mike Wyrzykowski
Comment 3
2024-05-02 13:31:36 PDT
***
Bug 273573
has been marked as a duplicate of this bug. ***
EWS
Comment 4
2024-05-03 09:27:04 PDT
Committed
278326@main
(7328ea1a6d2a): <
https://commits.webkit.org/278326@main
> Reviewed commits have been landed. Closing PR #27805 and removing active labels.
Mike Wyrzykowski
Comment 5
2024-05-03 14:41:44 PDT
Causes a regression on Intel Macs, re-opening
Mike Wyrzykowski
Comment 6
2024-05-03 14:53:28 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28126
EWS
Comment 7
2024-05-03 15:09:00 PDT
Committed
278347@main
(3a1c5a3d36c4): <
https://commits.webkit.org/278347@main
> Reviewed commits have been landed. Closing PR #28126 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug