[WebGPU] Destroyed texture should not be used as depth stencil attachments https://bugs.webkit.org/show_bug.cgi?id=273323 <radar://127115893>

Reviewed by Tadeu Zagallo.

Destroyed textures are 1x1 bgra8unorm textures, there is no
benefit to having those set as a depth stencil attachment.

Any draw commands will make the command encoder invalid when a
destroyed texture is used during a draw command, so there is
no change in behavior.

* LayoutTests/TestExpectations:
* LayoutTests/fast/webgpu/fuzz-273323-expected.txt: Added.
* LayoutTests/fast/webgpu/fuzz-273323.html: Added.
* LayoutTests/fast/webgpu/fuzz-273573-expected.txt: Added.
* LayoutTests/fast/webgpu/fuzz-273573.html: Added.
Add regression tests.

* Source/WebGPU/WebGPU/CommandEncoder.mm:
(WebGPU::CommandEncoder::beginRenderPass):
* Source/WebGPU/WebGPU/Device.h:
* Source/WebGPU/WebGPU/Device.mm:
(WebGPU::Device::Device):
(WebGPU::Device::placeholderTexture const):
* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::m_maxDrawCount):
(WebGPU::RenderPassEncoder::drawIndexed):
* Source/WebGPU/WebGPU/Texture.mm:
(WebGPU::Texture::destroy):
* Source/WebGPU/WebGPU/TextureView.h:
(WebGPU::TextureView::texture const): Deleted.
* Source/WebGPU/WebGPU/TextureView.mm:
(WebGPU::TextureView::texture const):
(WebGPU::TextureView::destroy):

Canonical link: https://commits.webkit.org/278326@main