Source/WebGPU/WebGPU/Device.mm
@@ -200,6 +200,8 @@ Device::Device(id<MTLDevice> device, id<MTLCommandQueue> defaultQueue, HardwareC
     desc.storageMode = MTLStorageModeShared;
     desc.usage = MTLTextureUsageShaderRead | MTLTextureUsageRenderTarget;
     m_placeholderTexture = [m_device newTextureWithDescriptor:desc];
+    desc.pixelFormat = MTLPixelFormatDepth32Float_Stencil8;
+    m_placeholderDepthStencilTexture = [m_device newTextureWithDescriptor:desc];
 }
 
 Device::Device(Adapter& adapter)
@@ -290,9 +292,9 @@ id<MTLBuffer> Device::placeholderBuffer() const
     return m_placeholderBuffer;
 }
 
-id<MTLTexture> Device::placeholderTexture() const
+id<MTLTexture> Device::placeholderTexture(WGPUTextureFormat format) const
 {
-    return m_placeholderTexture;
+    return Texture::isDepthOrStencilFormat(format) ? m_placeholderDepthStencilTexture : m_placeholderTexture;
 }
 
 Queue& Device::getQueue()
